--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   package="com.mobile">
 
-    <uses-permission android:name="android.permission.INTERNET" />
+    <!-- PERMISSÕES DO APLICATIVO -->
+    <!-- PARA CONECTAR INTERNET, PADRÃO  -->
+    <uses-permission android:name="android.permission.INTERNET" /> 
+    <!-- ACESSAR LOCALIZAÇÃO  -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" /> 
+    
+    <!-- PUSH NOTIFICATION -->
+    <uses-permission android:name="android.permission.RECEIVE_WAP_PUSH" />
 
     <application
       android:name=".MainApplication"
@@ -10,6 +20,14 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
+
+      <meta-data
+        android:name="com.google.android.geo.API_KEY" 
+        android:value="AIzaSyASn11UABatkzUh3XyyrEZ80uWBDv1TAWs"/>  <!--PASSAR API AQUI -->
+
+      <uses-library android:name="org.apache.http.legacy" android:required="false"/>
+     
+
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
