--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,8 +6,12 @@ buildscript {
         minSdkVersion = 21
         compileSdkVersion = 29
         targetSdkVersion = 29
-        ndkVersion = "20.1.5948944"
-    }
+        ndkVersion = "20.1.5948944" 
+        supportLibVersion =  "28.0.0"
+        playServicesVersion =  "17.0.0"
+        androidMapsUtilsVersion = "2.2.0"
+    } 
+ 
     repositories {
         google()
         jcenter()
