--- a/package.json
+++ b/package.json
@@ -15,11 +15,17 @@
     "@react-navigation/drawer": "^5.12.4",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
+    "axios": "^0.21.1",
+    "expo-location": "^11.0.0",
     "firebase": "^8.3.0",
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-elements": "^3.3.2",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-google-places-autocomplete": "^2.2.0",
+    "react-native-maps": "^0.27.1",
+    "react-native-maps-directions": "^1.8.0",
+    "react-native-permissions": "^3.0.1",
     "react-native-reanimated": "^1.9.9",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^2.18.1",
