--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-google-places-autocomplete": "^2.2.0",
     "react-native-maps": "^0.27.1",
     "react-native-maps-directions": "^1.8.0",
+    "react-native-onesignal": "^3.9.2",
     "react-native-permissions": "^3.0.1",
     "react-native-reanimated": "^1.9.9",
     "react-native-safe-area-context": "^3.2.0",
