--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "axios": "^0.21.1",
     "expo-location": "^11.0.0",
     "firebase": "^8.3.0",
+    "formik": "^2.2.6",
+    "intl": "^1.2.5",
+    "moment": "^2.29.1",
     "react": "17.0.1",
+    "react-hook-form": "^7.0.5",
     "react-native": "0.64.0",
     "react-native-elements": "^3.3.2",
     "react-native-gesture-handler": "^1.10.3",
@@ -30,7 +34,8 @@
     "react-native-reanimated": "^1.9.9",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^2.18.1",
-    "react-native-vector-icons": "^8.1.0"
+    "react-native-vector-icons": "^8.1.0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
