--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/drawer": "^5.12.4",
+    "@react-navigation/material-top-tabs": "^5.3.15",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
     "axios": "^0.21.1",
@@ -30,10 +31,13 @@
     "react-native-maps": "^0.27.1",
     "react-native-maps-directions": "^1.8.0",
     "react-native-onesignal": "^3.9.2",
+    "react-native-paper": "^4.7.2",
     "react-native-permissions": "^3.0.1",
     "react-native-reanimated": "^1.9.9",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^2.18.1",
+    "react-native-tab-view": "^2.16.0",
+    "react-native-text-input-mask": "^3.1.4",
     "react-native-vector-icons": "^8.1.0",
     "yup": "^0.32.9"
   },
