corrigindo erro do git

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
-    "@react-navigation/bottom-tabs": "^5.11.8",
+    "@react-native-firebase/app": "^11.3.0",
+    "@react-native-firebase/messaging": "^11.3.0",
+    "@react-navigation/bottom-tabs": "^5.11.10",
     "@react-navigation/drawer": "^5.12.4",
     "@react-navigation/material-top-tabs": "^5.3.15",
     "@react-navigation/native": "^5.9.3",
@@ -30,7 +32,7 @@
     "react-native-google-places-autocomplete": "^2.2.0",
     "react-native-maps": "^0.27.1",
     "react-native-maps-directions": "^1.8.0",
-    "react-native-onesignal": "^3.9.2",
+    "react-native-onesignal": "^3.9.3",
     "react-native-paper": "^4.7.2",
     "react-native-permissions": "^3.0.1",
     "react-native-reanimated": "^1.9.9",
@@ -43,6 +45,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
+    "@babel/highlight": "^7.13.10",
     "@babel/runtime": "^7.13.10",
     "@react-native-community/eslint-config": "^2.0.0",
     "babel-jest": "^26.6.3",
