--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.3",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^11.3.0",
     "@react-native-firebase/messaging": "^11.3.0",
@@ -48,11 +49,16 @@
     "@babel/highlight": "^7.13.10",
     "@babel/runtime": "^7.13.10",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@types/jest": "^26.0.22",
+    "@types/react": "^17.0.3",
+    "@types/react-native": "^0.64.4",
+    "@types/react-test-renderer": "^17.0.1",
     "babel-jest": "^26.6.3",
     "eslint": "^7.22.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.65.2",
-    "react-test-renderer": "17.0.1"
+    "react-test-renderer": "17.0.1",
+    "typescript": "^4.2.4"
   },
   "jest": {
     "preset": "react-native"
